removed deprecated URL constructor method call